k3s/jackett-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett-deployment
  labels:
    app: jackett
    namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: jackett
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jackett
    spec:
      volumes:
        - name: jackett-config
          persistentVolumeClaim:
            claimName: jackett-pvc-config
        - name: jackett-downloads
          persistentVolumeClaim:
            claimName: jackett-pvc-downloads
      containers:
        - name: jackett
          image: 'ghcr.io/linuxserver/jackett:latest'
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 9117
              protocol: TCP
          volumeMounts:
          - mountPath: /config
            name: jackett-config
          - mountPath: /downloads
            name: jackett-downloads
          livenessProbe:
            tcpSocket:
              port: 9117
            initialDelaySeconds: 60
            periodSeconds: 5
      restartPolicy: Always
