k3s/plex-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deployment
  labels:
    app: plex
    namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: plex
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: plex
    spec:
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-pvc-config
        - name: plex-tv
          persistentVolumeClaim:
            claimName: plex-pvc-tv
        - name: plex-movies
          persistentVolumeClaim:
            claimName: plex-pvc-movies
      containers:
        - name: plex
          image: 'ghcr.io/linuxserver/plex:1.25.0'
          imagePullPolicy: Always
          ports:
            - containerPort: 32400
              name: pms-web
              protocol: TCP
            - containerPort: 32469
              name: dlna-tcp
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 3005
              name: plex-companion
              protocol: TCP  
            - containerPort: 5353
              name: discovery-udp
              protocol: UDP  
            - containerPort: 8324
              name: plex-roku
              protocol: TCP  
            - containerPort: 32410
              name: gdm-32410
              protocol: UDP
            - containerPort: 32412
              name: gdm-32412
              protocol: UDP
            - containerPort: 32413
              name: gdm-32413
              protocol: UDP
            - containerPort: 32414
              name: gdm-32414
              protocol: UDP
          volumeMounts:
          - mountPath: /config
            name: plex-config
          - mountPath: /tv
            name: plex-tv
          - mountPath: /movies
            name: plex-movies
          livenessProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 30
            periodSeconds: 5
      restartPolicy: Always
