k3s/radarr-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-deployment
  labels:
    app: radarr
    namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-pvc-config
        - name: radarr-movies
          persistentVolumeClaim:
            claimName: radarr-pvc-movies
        - name: radarr-downloads
          persistentVolumeClaim:
            claimName: radarr-pvc-downloads
      containers:
        - name: radarr
          image: 'ghcr.io/linuxserver/radarr:latest'
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8989
              protocol: TCP
          volumeMounts:
          - mountPath: /config
            name: radarr-config
          - mountPath: /movies
            name: radarr-movies
          - mountPath: /downloads
            name: radarr-downloads
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              host: localhost
              port: 7878
      restartPolicy: Always
