k3s/transmission-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-deployment
  labels:
    app: transmission
    namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      volumes:
        - name: transmission-config
          persistentVolumeClaim:
            claimName: transmission-pvc-config
        - name: transmission-watch
          persistentVolumeClaim:
            claimName: transmission-pvc-watch
        - name: transmission-downloads
          persistentVolumeClaim:
            claimName: transmission-pvc-downloads
      containers:
        - name: transmission
          image: 'ghcr.io/linuxserver/transmission:latest'
          imagePullPolicy: Always
          ports:
            - name: 'web'
              containerPort: 9091
              protocol: TCP
            - name: 'outside'
              containerPort: 51413
              protocol: TCP
          volumeMounts:
          - mountPath: /config
            name: transmission-config
          - mountPath: /watch
            name: transmission-watch
          - mountPath: /downloads
            name: transmission-downloads
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              host: localhost
              port: 9091
      restartPolicy: Always
