k3s/jackett-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  labels:
    app: jackett
  namespace: media
spec:
  selector:
    app: jackett
  ports:
    - port: 9117
      targetPort: 9117
      #nodePort: 30010
      protocol: TCP
      name: web
  type: LoadBalancer
