k3s/sonarr-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      nodePort: 30000
      protocol: TCP
      name: web
  type: LoadBalancer
