k3s/jackett-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: jackett-hmc.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port: 
              number: 9117
